fixed some media-thumbnails that were not responsive due to the api making some images have a different aspect ratio :/

--- a/client/styles/modules/_media-thumbnail.scss
+++ b/client/styles/modules/_media-thumbnail.scss
@@ -105,6 +105,10 @@
 
 .media-thumbnail__image {
   width: 100%;
+  min-height: 388px;
+  @media screen and (min-width: 1198px) {
+    height: 388px;
+  }
 }
 
 
